--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PoE-TradeMacro/SupportTradeMacro#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "gulp-cssmin": "^0.2.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.3.0",
